# classbench-mapper

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: arguments.cpp  cbreader.cpp  cbreader.h  errorf.h  integer-interval-set.h  log.cpp  log.h  main.cpp  mapping.h  random.h  reader.h  ruleset.cpp  ruleset.h  string-ops.h  util-cb-map.cpp  zstream.h
